cmake_minimum_required(VERSION 3.22)
project(Bookstore-2022)

set(CMAKE_CXX_STANDARD 14)

#add_executable(code main.cpp
#        UserSystem.cpp
#        BookSystem.cpp
#        LogFinance.cpp
#        LogUser.cpp
#        Command.cpp
#        UnrolledLinkList.cpp
#        )

add_executable(test 1774.cpp 1774test.cpp)